--- a/3-tier-architecture/backend.yaml
+++ b/3-tier-architecture/backend.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: backend-app
-        image: rajatpzade/backend-app:latest
+        image: kunaldarwatkar/backend
         resources:
           limits:
             memory: "128Mi"
